# amaru-pi

./: .gitignore  Makefile  README.md
.devcontainer/: devcontainer.json
.github/workflows/: coding-practices.yml  continuous-deployment.yml  continuous-integration.yml  release.yml
app/: Cargo.toml  Cross.toml  Dockerfile  Makefile  README.md  rust-toolchain.toml
app/src/: actions.rs  app.rs  button.rs  cli.rs  frame.rs  input.rs  lib.rs  logs.rs  main.rs  metrics_data.rs  modal.rs  network_status.rs  screen_flow.rs  systemd.rs  timeseries.rs  top_bar.rs  tui.rs  update.rs  wifi.rs
app/src/api/: mod.rs
app/src/backends/: display_hat.rs  mod.rs  simulator.rs
app/src/backends/display_hat/: input.rs  mod.rs  tty_keyboard.rs
app/src/keyboard/: input.rs  layout.rs  mod.rs  render.rs
app/src/migrations/: m2025_12.rs
app/src/screens/: chart.rs  color.rs  exit.rs  info.rs  logo.rs  logs.rs  metrics.rs  mod.rs  scan.rs  tip.rs
app/src/screens/wifi_settings/: input.rs  mod.rs  render.rs
app/src/services/: metrics.rs  mod.rs
assets/enclosure/: Alim button.stl  Bottom.stl  Box - top.stl  Enclosure -bottom.stl  Support.stl  Top.stl  X button.stl  Y button.stl  button.stl
buildroot/: 0001-feat-basic-raspberrypi5-setup.patch  0001-feat-wifi-portal-to-setup-network-configuration.patch  README.md
buildroot/pragma-org/: Config.in  external.desc  external.mk
buildroot/pragma-org/package/amaru/: Config.in  amaru.mk
claim/generate-words/: Cargo.toml  README.md
claim/generate-words/src/: main.rs
conf/: cmdline.txt  config.txt
deploy/: setup-system.sh  setup-user.sh
deploy/amaru-pi/: remote-amaru-pi-deploy.sh
deploy/doctor/: bash_profile.line.template  doctor-startup.sh  getty-override.conf.template  remote-doctor-deploy.sh
overlays/boot/firmware/: README.md  config.txt
overlays/etc/profile.d/: amaru-pi-tty1.sh
overlays/etc/systemd/system/: activate-update.path  activate-update.service  amaru-doctor.service  amaru-hotspot.service  amaru-hotspot.timer  amaru-pi.service  amaru.service  first-boot.service  hat_splash.service  splash.service  updater.service  updater.timer
overlays/etc/systemd/system/getty@tty1.service.d/: override.conf
overlays/home/pi/: amaru.env  setup.sh
overlays/home/pi/.config/autostart/: amaru-doctor.desktop
overlays/home/pi/.local/share/applications/: amaru-doctor.desktop
overlays/home/pi/scripts/: activate-update.sh  amaru-doctor-start.sh  amaru-logs.sh  amaru-monitoring-logs.sh  amaru-monitoring-start.sh  amaru-monitoring-status.sh  amaru-start-direct.sh  amaru-start.sh  amaru-status.sh  amaru-stop.sh  configure.sh  first-boot.sh  helper.sh  setup.sh  updater.sh
overlays/home/pi/scripts/configure/: set-envs.sh  set-wifi-conf.sh
overlays/home/pi/scripts/setup/: amaru.sh  hostname.sh  hotspot.sh  lean.sh  py-displayhatmini.sh  services.sh  ssh.sh
raspbian/: README.md
scripts/: build-assets.sh  configure.sh  dump-image.sh  dump-pi-image.sh  run-pi.sh  setup-pi.sh  setup.sh  sync-overlays.sh
scripts/helper/: build-assets.sh  remote.sh  sync-overlays.sh
scripts/inky/: README.md  badge-per-epoch.sh
ui/: Makefile  app.html  build.html  claim.html  error.html  getting-started.html  index.html  main.html  quick-start.html  quick-start.md
ui/assets/: wip.mov
ui/old/: README.md  app.html  build.md  error.html  index.html  main.html  quick-start.html  quick-start.md
ui/redirect/: index.html
