[package]
name = "amaru-pi"
edition = "2024"
publish = false
default-run = "amaru-pi"

[dependencies]
amaru-kernel = { git = "https://github.com/pragma-org/amaru" }
amaru-doctor = { git = "https://github.com/jeluard/amaru-doctor" }
tui-qrcode = { git = "https://github.com/jeluard/tui-widgets", branch = "jeluard/upgrade-ratatui"}
mousefood = { git = "https://github.com/j-g00da/mousefood", features = ["framebuffer"] }
ratatui = "0.30.0-alpha.5"
mipidsi = { version = "0.9.0", optional = true }
rppal = {version = "0.22.1", features = ["hal"], optional = true}
embedded-hal-bus = { version = "0.3.0", optional = true }
embedded-hal = { version = "1.0.0", optional = true }
crossterm = "0.29.0"
palette = "0.7"
embedded-graphics-simulator = { version = "0.8.0", optional = true }
tokio = { version = "1.47.1", features = ["full"] }
tachyonfx = { git = "https://github.com/junkdog/tachyonfx", branch = "ratatui-0.30-preview" }
qrcode = "0.14.1"
indoc = "2.0.6"
signal-hook = "0.3.18"
#linux-embedded-hal = {version = "0.4.0", features = ["spi"], optional = true }
#spidev = {version = "0.7.0", optional = true }
#bluer = { version = "0.17.4", features = ["bluetoothd"] }
#bluer = { version = "0.17.4" }
#zbus = "5.11.0"
#futures = "0.3.31"
anyhow = "1.0.100"

[features]
default = ["display_hat"]
simulator = ["embedded-graphics-simulator"]
#display_hat = ["mipidsi", "spidev", "linux-embedded-hal", "embedded-hal-bus", "embedded-hal"]
display_hat = ["mipidsi", "rppal", "embedded-hal-bus", "embedded-hal"]

[workspace]