[package]
name = "amaru-pi"
edition = "2024"
publish = false
default-run = "amaru-pi"

[dependencies]
amaru-kernel = { git = "https://github.com/pragma-org/amaru" }
tui-qrcode = { git = "https://github.com/jeluard/tui-widgets", branch = "jeluard/upgrade-ratatui"}
tui-big-text = { git = "https://github.com/jeluard/tui-widgets", branch = "jeluard/upgrade-ratatui"}
mousefood = { git = "https://github.com/j-g00da/mousefood", features = ["framebuffer"] }
ratatui = "0.30.0-alpha.5"
mipidsi = { version = "0.9.0", optional = true }
rppal = {version = "0.22.1", features = ["hal"], optional = true}
embedded-hal-bus = { version = "0.3.0", optional = true }
embedded-hal = { version = "1.0.0", optional = true }
crossterm = "0.29.0"
palette = "0.7"
embedded-graphics-simulator = { version = "0.8.0", optional = true }
tokio = { version = "1.47.1", features = ["full"] }
tachyonfx = { git = "https://github.com/junkdog/tachyonfx", branch = "ratatui-0.30-preview" }
qrcode = "0.14.1"
indoc = "2.0.6"
anyhow = "1.0.100"
opentelemetry-proto = "0.31.0"
axum = "0.8.6"
bytes = "1"
prost = "0.14.1"
serde_json = "1.0.145"
serde = "1.0.228"
clap = { version = "4.5.51", features = ["derive", "env"] }
tracing = "0.1.41"

[features]
default = ["simulator"]
simulator = ["embedded-graphics-simulator"]
display_hat = ["mipidsi", "rppal", "embedded-hal-bus", "embedded-hal"]

[workspace]
